fix: too many tags line breaks on the article page & syntax name scroll bar is misplaced

--- a/apps/dockyard/src/modules/post/article.less
+++ b/apps/dockyard/src/modules/post/article.less
@@ -19,6 +19,10 @@ article {
   a {
     text-decoration: none;
     color: var(--color-primary);
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   >pre {
@@ -41,13 +45,17 @@ article {
 
     position: relative;
 
-    &::after {
+    &::before {
       content: attr(data-language);
       position: absolute;
-      right: 6px;
-      top: 6px;
-      color: var(--color-font-3);
       font-size: 12px;
+      color: var(--color-font-3);
+      top: 3px;
+      left: 3px;
+      font-size: 10px;
+      // background: var(--color-bg);
+      // border-radius: var(--radius) 0 var(--radius) 0;
+      // padding: 2px;
       line-height: 1;
     }
   }
@@ -92,8 +100,7 @@ article {
   h6 {
     font-weight: 600;
     padding-top: 12px;
-    margin-top: 24px;
-    margin-bottom: 12px;
+    margin: 2.5rem 0 .5rem 0;
     color: var(--color-font);
   }
 
@@ -104,6 +111,10 @@ article {
     li {
       line-height: 24px;
       color: var(--color-font);
+
+      &::marker {
+        color: var(--color-font-2);
+      }
     }
   }
 
